syntax = "proto3";
package douyin.core;
option go_package = "./proto";
import "feed.proto";

message douyin_publish_list_request{
  int64 user_id = 1;
  string token = 2;
}
message douyin_publish_list_response{
  int32 status_code = 1;
  string status_msg = 2;
  repeated Video video_list = 3;
}